# aoc

./: .gitignore  Cargo.toml  README.md
2020/: .gitignore
2020/purescript/src/: Day1.purs  Main.purs
2020/purescript/src/Util/: Parse.purs
2020/rust/: Cargo.toml
2020/rust/src/: day_07.rs  day_08.rs  day_09.rs  day_10.rs  lib.rs
2021/haskell/: README.md
2021/rust/: Cargo.toml  README.md
2021/rust/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs
purescript/: spago.dhall
rust/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_08.rs  lib.rs
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_07.rs  lib.rs
