[package]
name = "aoc-2021"
version = "0.1.0"
authors = ["Pedro Burgos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
lazy_static = "1"
regex = "1"
anyhow = "1.0.34"
ndarray = "0.15.4"
itertools = "0.10.1"
join = "0.3.0"
scan_fmt = "0.2.6"
